--- a/Clients/HermesSpa/ClientApp/src/index.html
+++ b/Clients/HermesSpa/ClientApp/src/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>HermesSpa</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <title>HermesSpa</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+    <app-root>
+        <div style="position:fixed; top:50%; left:50%;">
+          <i class="fa fa-spinner fa-pulse fa-5x fa-fw" style="margin-top:-0.55em; margin-left:-0.66em;"></i>
+        </div>
+    </app-root>
 </body>
 </html>
